# VajeIIS

./: data.dvc  pyproject.toml
.dvc/: config
.github/workflows/: fetch_data.yml
data/preprocessed/air/: E403.csv  E404.csv  E405.csv  E407.csv  E408.csv  E409.csv  E410.csv  E411.csv  E412.csv  E413.csv  E414.csv  E415.csv  E417.csv  E418.csv  E419.csv  E420.csv  E421.csv  E423.csv  E424.csv  E801.csv  E802.csv  E803.csv  E804.csv
data/raw/air/: air_data.xml
notebooks/: poskus.ipynb
src/data/: fetch_air_data.py  preprocess_air_data.py
