[tool.poetry]
name = "lab-vaje"
version = "0.1.0"
description = "IIR VAJE"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.2.4"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
lxml = "^5.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
